lib/sh/y.output

state 0
	$accept: .program $end 
	linebreak: .    (105)

	NEWLINE  shift 4
	.  reduce 105 (src line 223)

	program  goto 1
	linebreak  goto 2
	newline_list  goto 3

state 1
	$accept:  program.$end 

	$end  accept
	.  error


state 2
	program:  linebreak.complete_commands linebreak 
	program:  linebreak.    (2)

	WORD  shift 28
	ASSIGNMENT_WORD  shift 27
	NAME  shift 36
	IO_NUMBER  shift 38
	DLESS  shift 47
	DGREAT  shift 44
	LESSAND  shift 41
	GREATAND  shift 43
	LESSGREAT  shift 45
	DLESSDASH  shift 48
	CLOBBER  shift 46
	If  shift 33
	Case  shift 32
	While  shift 34
	Until  shift 35
	For  shift 31
	Lbrace  shift 29
	Bang  shift 11
	'('  shift 30
	'<'  shift 40
	'>'  shift 42
	.  reduce 2 (src line 77)

	complete_commands  goto 5
	complete_command  goto 6
	list  goto 7
	and_or  goto 8
	pipeline  goto 9
	pipe_sequence  goto 10
	command  goto 12
	simple_command  goto 13
	compound_command  goto 14
	function_definition  goto 15
	brace_group  goto 18
	subshell  goto 19
	for_clause  goto 20
	case_clause  goto 21
	if_clause  goto 22
	while_clause  goto 23
	until_clause  goto 24
	fname  goto 25
	cmd_prefix  goto 16
	cmd_name  goto 17
	io_redirect  goto 26
	io_file  goto 37
	io_here  goto 39

state 3
	newline_list:  newline_list.NEWLINE 
	linebreak:  newline_list.    (104)

	NEWLINE  shift 49
	.  reduce 104 (src line 222)


state 4
	newline_list:  NEWLINE.    (102)

	.  reduce 102 (src line 219)


state 5
	program:  linebreak complete_commands.linebreak 
	complete_commands:  complete_commands.newline_list complete_command 
	linebreak: .    (105)

	NEWLINE  shift 4
	.  reduce 105 (src line 223)

	linebreak  goto 50
	newline_list  goto 51

state 6
	complete_commands:  complete_command.    (4)

	.  reduce 4 (src line 80)


state 7
	complete_command:  list.separator_op 
	complete_command:  list.    (6)
	list:  list.separator_op and_or 

	'&'  shift 53
	';'  shift 54
	.  reduce 6 (src line 83)

	separator_op  goto 52

state 8
	list:  and_or.    (8)
	and_or:  and_or.AND_IF linebreak pipeline 
	and_or:  and_or.OR_IF linebreak pipeline 

	AND_IF  shift 55
	OR_IF  shift 56
	.  reduce 8 (src line 86)


state 9
	and_or:  pipeline.    (9)

	.  reduce 9 (src line 88)


state 10
	pipeline:  pipe_sequence.    (12)
	pipe_sequence:  pipe_sequence.'|' linebreak command 

	'|'  shift 57
	.  reduce 12 (src line 92)


state 11
	pipeline:  Bang.pipe_sequence 

	WORD  shift 28
	ASSIGNMENT_WORD  shift 27
	NAME  shift 36
	IO_NUMBER  shift 38
	DLESS  shift 47
	DGREAT  shift 44
	LESSAND  shift 41
	GREATAND  shift 43
	LESSGREAT  shift 45
	DLESSDASH  shift 48
	CLOBBER  shift 46
	If  shift 33
	Case  shift 32
	While  shift 34
	Until  shift 35
	For  shift 31
	Lbrace  shift 29
	'('  shift 30
	'<'  shift 40
	'>'  shift 42
	.  error

	pipe_sequence  goto 58
	command  goto 12
	simple_command  goto 13
	compound_command  goto 14
	function_definition  goto 15
	brace_group  goto 18
	subshell  goto 19
	for_clause  goto 20
	case_clause  goto 21
	if_clause  goto 22
	while_clause  goto 23
	until_clause  goto 24
	fname  goto 25
	cmd_prefix  goto 16
	cmd_name  goto 17
	io_redirect  goto 26
	io_file  goto 37
	io_here  goto 39

state 12
	pipe_sequence:  command.    (14)

	.  reduce 14 (src line 95)


state 13
	command:  simple_command.    (16)

	.  reduce 16 (src line 98)


state 14
	command:  compound_command.    (17)
	command:  compound_command.redirect_list 

	IO_NUMBER  shift 38
	DLESS  shift 47
	DGREAT  shift 44
	LESSAND  shift 41
	GREATAND  shift 43
	LESSGREAT  shift 45
	DLESSDASH  shift 48
	CLOBBER  shift 46
	'<'  shift 40
	'>'  shift 42
	.  reduce 17 (src line 99)

	redirect_list  goto 59
	io_redirect  goto 60
	io_file  goto 37
	io_here  goto 39

state 15
	command:  function_definition.    (19)

	.  reduce 19 (src line 101)


state 16
	simple_command:  cmd_prefix.cmd_word cmd_suffix 
	simple_command:  cmd_prefix.cmd_word 
	simple_command:  cmd_prefix.    (72)
	cmd_prefix:  cmd_prefix.io_redirect 
	cmd_prefix:  cmd_prefix.ASSIGNMENT_WORD 

	WORD  shift 64
	ASSIGNMENT_WORD  shift 63
	IO_NUMBER  shift 38
	DLESS  shift 47
	DGREAT  shift 44
	LESSAND  shift 41
	GREATAND  shift 43
	LESSGREAT  shift 45
	DLESSDASH  shift 48
	CLOBBER  shift 46
	'<'  shift 40
	'>'  shift 42
	.  reduce 72 (src line 178)

	cmd_word  goto 61
	io_redirect  goto 62
	io_file  goto 37
	io_here  goto 39

state 17
	simple_command:  cmd_name.cmd_suffix 
	simple_command:  cmd_name.    (74)

	WORD  shift 67
	IO_NUMBER  shift 38
	DLESS  shift 47
	DGREAT  shift 44
	LESSAND  shift 41
	GREATAND  shift 43
	LESSGREAT  shift 45
	DLESSDASH  shift 48
	CLOBBER  shift 46
	'<'  shift 40
	'>'  shift 42
	.  reduce 74 (src line 180)

	cmd_suffix  goto 65
	io_redirect  goto 66
	io_file  goto 37
	io_here  goto 39

state 18
	compound_command:  brace_group.    (20)

	.  reduce 20 (src line 103)


state 19
	compound_command:  subshell.    (21)

	.  reduce 21 (src line 104)


state 20
	compound_command:  for_clause.    (22)

	.  reduce 22 (src line 105)


state 21
	compound_command:  case_clause.    (23)

	.  reduce 23 (src line 106)


state 22
	compound_command:  if_clause.    (24)

	.  reduce 24 (src line 107)


state 23
	compound_command:  while_clause.    (25)

	.  reduce 25 (src line 108)


state 24
	compound_command:  until_clause.    (26)

	.  reduce 26 (src line 109)


state 25
	function_definition:  fname.'(' ')' linebreak function_body 

	'('  shift 68
	.  error


state 26
	cmd_prefix:  io_redirect.    (77)

	.  reduce 77 (src line 186)


state 27
	cmd_prefix:  ASSIGNMENT_WORD.    (79)

	.  reduce 79 (src line 188)


state 28
	cmd_name:  WORD.    (75)

	.  reduce 75 (src line 182)


state 29
	brace_group:  Lbrace.compound_list Rbrace 
	linebreak: .    (105)

	NEWLINE  shift 4
	.  reduce 105 (src line 223)

	linebreak  goto 70
	newline_list  goto 3
	compound_list  goto 69

state 30
	subshell:  '('.compound_list ')' 
	linebreak: .    (105)

	NEWLINE  shift 4
	.  reduce 105 (src line 223)

	linebreak  goto 70
	newline_list  goto 3
	compound_list  goto 71

state 31
	for_clause:  For.name do_group 
	for_clause:  For.name sequential_sep do_group 
	for_clause:  For.name linebreak in sequential_sep do_group 
	for_clause:  For.name linebreak in wordlist sequential_sep do_group 

	NAME  shift 73
	.  error

	name  goto 72

state 32
	case_clause:  Case.WORD linebreak in linebreak case_list Esac 
	case_clause:  Case.WORD linebreak in linebreak case_list_ns Esac 
	case_clause:  Case.WORD linebreak in linebreak Esac 

	WORD  shift 74
	.  error


state 33
	if_clause:  If.compound_list Then compound_list else_part Fi 
	if_clause:  If.compound_list Then compound_list Fi 
	linebreak: .    (105)

	NEWLINE  shift 4
	.  reduce 105 (src line 223)

	linebreak  goto 70
	newline_list  goto 3
	compound_list  goto 75

state 34
	while_clause:  While.compound_list do_group 
	linebreak: .    (105)

	NEWLINE  shift 4
	.  reduce 105 (src line 223)

	linebreak  goto 70
	newline_list  goto 3
	compound_list  goto 76

state 35
	until_clause:  Until.compound_list do_group 
	linebreak: .    (105)

	NEWLINE  shift 4
	.  reduce 105 (src line 223)

	linebreak  goto 70
	newline_list  goto 3
	compound_list  goto 77

state 36
	fname:  NAME.    (67)

	.  reduce 67 (src line 170)


state 37
	io_redirect:  io_file.    (87)

	.  reduce 87 (src line 199)


state 38
	io_redirect:  IO_NUMBER.io_file 
	io_redirect:  IO_NUMBER.io_here 

	DLESS  shift 47
	DGREAT  shift 44
	LESSAND  shift 41
	GREATAND  shift 43
	LESSGREAT  shift 45
	DLESSDASH  shift 48
	CLOBBER  shift 46
	'<'  shift 40
	'>'  shift 42
	.  error

	io_file  goto 78
	io_here  goto 79

state 39
	io_redirect:  io_here.    (89)

	.  reduce 89 (src line 201)


state 40
	io_file:  '<'.filename 

	WORD  shift 81
	.  error

	filename  goto 80

state 41
	io_file:  LESSAND.filename 

	WORD  shift 81
	.  error

	filename  goto 82

state 42
	io_file:  '>'.filename 

	WORD  shift 81
	.  error

	filename  goto 83

state 43
	io_file:  GREATAND.filename 

	WORD  shift 81
	.  error

	filename  goto 84

state 44
	io_file:  DGREAT.filename 

	WORD  shift 81
	.  error

	filename  goto 85

state 45
	io_file:  LESSGREAT.filename 

	WORD  shift 81
	.  error

	filename  goto 86

state 46
	io_file:  CLOBBER.filename 

	WORD  shift 81
	.  error

	filename  goto 87

state 47
	io_here:  DLESS.here_end 

	WORD  shift 89
	.  error

	here_end  goto 88

state 48
	io_here:  DLESSDASH.here_end 

	WORD  shift 89
	.  error

	here_end  goto 90

state 49
	newline_list:  newline_list NEWLINE.    (103)

	.  reduce 103 (src line 220)


state 50
	program:  linebreak complete_commands linebreak.    (1)

	.  reduce 1 (src line 76)


state 51
	complete_commands:  complete_commands newline_list.complete_command 
	newline_list:  newline_list.NEWLINE 
	linebreak:  newline_list.    (104)

	WORD  shift 28
	ASSIGNMENT_WORD  shift 27
	NAME  shift 36
	NEWLINE  shift 49
	IO_NUMBER  shift 38
	DLESS  shift 47
	DGREAT  shift 44
	LESSAND  shift 41
	GREATAND  shift 43
	LESSGREAT  shift 45
	DLESSDASH  shift 48
	CLOBBER  shift 46
	If  shift 33
	Case  shift 32
	While  shift 34
	Until  shift 35
	For  shift 31
	Lbrace  shift 29
	Bang  shift 11
	'('  shift 30
	'<'  shift 40
	'>'  shift 42
	.  reduce 104 (src line 222)

	complete_command  goto 91
	list  goto 7
	and_or  goto 8
	pipeline  goto 9
	pipe_sequence  goto 10
	command  goto 12
	simple_command  goto 13
	compound_command  goto 14
	function_definition  goto 15
	brace_group  goto 18
	subshell  goto 19
	for_clause  goto 20
	case_clause  goto 21
	if_clause  goto 22
	while_clause  goto 23
	until_clause  goto 24
	fname  goto 25
	cmd_prefix  goto 16
	cmd_name  goto 17
	io_redirect  goto 26
	io_file  goto 37
	io_here  goto 39

state 52
	complete_command:  list separator_op.    (5)
	list:  list separator_op.and_or 

	WORD  shift 28
	ASSIGNMENT_WORD  shift 27
	NAME  shift 36
	IO_NUMBER  shift 38
	DLESS  shift 47
	DGREAT  shift 44
	LESSAND  shift 41
	GREATAND  shift 43
	LESSGREAT  shift 45
	DLESSDASH  shift 48
	CLOBBER  shift 46
	If  shift 33
	Case  shift 32
	While  shift 34
	Until  shift 35
	For  shift 31
	Lbrace  shift 29
	Bang  shift 11
	'('  shift 30
	'<'  shift 40
	'>'  shift 42
	.  reduce 5 (src line 82)

	and_or  goto 92
	pipeline  goto 9
	pipe_sequence  goto 10
	command  goto 12
	simple_command  goto 13
	compound_command  goto 14
	function_definition  goto 15
	brace_group  goto 18
	subshell  goto 19
	for_clause  goto 20
	case_clause  goto 21
	if_clause  goto 22
	while_clause  goto 23
	until_clause  goto 24
	fname  goto 25
	cmd_prefix  goto 16
	cmd_name  goto 17
	io_redirect  goto 26
	io_file  goto 37
	io_here  goto 39

state 53
	separator_op:  '&'.    (106)

	.  reduce 106 (src line 225)


state 54
	separator_op:  ';'.    (107)

	.  reduce 107 (src line 226)


state 55
	and_or:  and_or AND_IF.linebreak pipeline 
	linebreak: .    (105)

	NEWLINE  shift 4
	.  reduce 105 (src line 223)

	linebreak  goto 93
	newline_list  goto 3

state 56
	and_or:  and_or OR_IF.linebreak pipeline 
	linebreak: .    (105)

	NEWLINE  shift 4
	.  reduce 105 (src line 223)

	linebreak  goto 94
	newline_list  goto 3

state 57
	pipe_sequence:  pipe_sequence '|'.linebreak command 
	linebreak: .    (105)

	NEWLINE  shift 4
	.  reduce 105 (src line 223)

	linebreak  goto 95
	newline_list  goto 3

state 58
	pipeline:  Bang pipe_sequence.    (13)
	pipe_sequence:  pipe_sequence.'|' linebreak command 

	'|'  shift 57
	.  reduce 13 (src line 93)


state 59
	command:  compound_command redirect_list.    (18)
	redirect_list:  redirect_list.io_redirect 

	IO_NUMBER  shift 38
	DLESS  shift 47
	DGREAT  shift 44
	LESSAND  shift 41
	GREATAND  shift 43
	LESSGREAT  shift 45
	DLESSDASH  shift 48
	CLOBBER  shift 46
	'<'  shift 40
	'>'  shift 42
	.  reduce 18 (src line 100)

	io_redirect  goto 96
	io_file  goto 37
	io_here  goto 39

state 60
	redirect_list:  io_redirect.    (85)

	.  reduce 85 (src line 196)


state 61
	simple_command:  cmd_prefix cmd_word.cmd_suffix 
	simple_command:  cmd_prefix cmd_word.    (71)

	WORD  shift 67
	IO_NUMBER  shift 38
	DLESS  shift 47
	DGREAT  shift 44
	LESSAND  shift 41
	GREATAND  shift 43
	LESSGREAT  shift 45
	DLESSDASH  shift 48
	CLOBBER  shift 46
	'<'  shift 40
	'>'  shift 42
	.  reduce 71 (src line 177)

	cmd_suffix  goto 97
	io_redirect  goto 66
	io_file  goto 37
	io_here  goto 39

state 62
	cmd_prefix:  cmd_prefix io_redirect.    (78)

	.  reduce 78 (src line 187)


state 63
	cmd_prefix:  cmd_prefix ASSIGNMENT_WORD.    (80)

	.  reduce 80 (src line 189)


state 64
	cmd_word:  WORD.    (76)

	.  reduce 76 (src line 184)


state 65
	simple_command:  cmd_name cmd_suffix.    (73)
	cmd_suffix:  cmd_suffix.io_redirect 
	cmd_suffix:  cmd_suffix.WORD 

	WORD  shift 99
	IO_NUMBER  shift 38
	DLESS  shift 47
	DGREAT  shift 44
	LESSAND  shift 41
	GREATAND  shift 43
	LESSGREAT  shift 45
	DLESSDASH  shift 48
	CLOBBER  shift 46
	'<'  shift 40
	'>'  shift 42
	.  reduce 73 (src line 179)

	io_redirect  goto 98
	io_file  goto 37
	io_here  goto 39

state 66
	cmd_suffix:  io_redirect.    (81)

	.  reduce 81 (src line 191)


state 67
	cmd_suffix:  WORD.    (83)

	.  reduce 83 (src line 193)


state 68
	function_definition:  fname '('.')' linebreak function_body 

	')'  shift 100
	.  error


state 69
	brace_group:  Lbrace compound_list.Rbrace 

	Rbrace  shift 101
	.  error


state 70
	compound_list:  linebreak.term 
	compound_list:  linebreak.term separator 

	WORD  shift 28
	ASSIGNMENT_WORD  shift 27
	NAME  shift 36
	IO_NUMBER  shift 38
	DLESS  shift 47
	DGREAT  shift 44
	LESSAND  shift 41
	GREATAND  shift 43
	LESSGREAT  shift 45
	DLESSDASH  shift 48
	CLOBBER  shift 46
	If  shift 33
	Case  shift 32
	While  shift 34
	Until  shift 35
	For  shift 31
	Lbrace  shift 29
	Bang  shift 11
	'('  shift 30
	'<'  shift 40
	'>'  shift 42
	.  error

	and_or  goto 103
	pipeline  goto 9
	pipe_sequence  goto 10
	command  goto 12
	simple_command  goto 13
	compound_command  goto 14
	function_definition  goto 15
	brace_group  goto 18
	subshell  goto 19
	for_clause  goto 20
	case_clause  goto 21
	if_clause  goto 22
	while_clause  goto 23
	until_clause  goto 24
	term  goto 102
	fname  goto 25
	cmd_prefix  goto 16
	cmd_name  goto 17
	io_redirect  goto 26
	io_file  goto 37
	io_here  goto 39

state 71
	subshell:  '(' compound_list.')' 

	')'  shift 104
	.  error


state 72
	for_clause:  For name.do_group 
	for_clause:  For name.sequential_sep do_group 
	for_clause:  For name.linebreak in sequential_sep do_group 
	for_clause:  For name.linebreak in wordlist sequential_sep do_group 
	linebreak: .    (105)

	NEWLINE  shift 4
	Do  shift 108
	';'  shift 109
	.  reduce 105 (src line 223)

	linebreak  goto 107
	newline_list  goto 110
	do_group  goto 105
	sequential_sep  goto 106

state 73
	name:  NAME.    (36)

	.  reduce 36 (src line 124)


state 74
	case_clause:  Case WORD.linebreak in linebreak case_list Esac 
	case_clause:  Case WORD.linebreak in linebreak case_list_ns Esac 
	case_clause:  Case WORD.linebreak in linebreak Esac 
	linebreak: .    (105)

	NEWLINE  shift 4
	.  reduce 105 (src line 223)

	linebreak  goto 111
	newline_list  goto 3

state 75
	if_clause:  If compound_list.Then compound_list else_part Fi 
	if_clause:  If compound_list.Then compound_list Fi 

	Then  shift 112
	.  error


state 76
	while_clause:  While compound_list.do_group 

	Do  shift 108
	.  error

	do_group  goto 113

state 77
	until_clause:  Until compound_list.do_group 

	Do  shift 108
	.  error

	do_group  goto 114

state 78
	io_redirect:  IO_NUMBER io_file.    (88)

	.  reduce 88 (src line 200)


state 79
	io_redirect:  IO_NUMBER io_here.    (90)

	.  reduce 90 (src line 202)


state 80
	io_file:  '<' filename.    (91)

	.  reduce 91 (src line 204)


state 81
	filename:  WORD.    (98)

	.  reduce 98 (src line 212)


state 82
	io_file:  LESSAND filename.    (92)

	.  reduce 92 (src line 205)


state 83
	io_file:  '>' filename.    (93)

	.  reduce 93 (src line 206)


state 84
	io_file:  GREATAND filename.    (94)

	.  reduce 94 (src line 207)


state 85
	io_file:  DGREAT filename.    (95)

	.  reduce 95 (src line 208)


state 86
	io_file:  LESSGREAT filename.    (96)

	.  reduce 96 (src line 209)


state 87
	io_file:  CLOBBER filename.    (97)

	.  reduce 97 (src line 210)


state 88
	io_here:  DLESS here_end.    (99)

	.  reduce 99 (src line 214)


state 89
	here_end:  WORD.    (101)

	.  reduce 101 (src line 217)


state 90
	io_here:  DLESSDASH here_end.    (100)

	.  reduce 100 (src line 215)


state 91
	complete_commands:  complete_commands newline_list complete_command.    (3)

	.  reduce 3 (src line 79)


state 92
	list:  list separator_op and_or.    (7)
	and_or:  and_or.AND_IF linebreak pipeline 
	and_or:  and_or.OR_IF linebreak pipeline 

	AND_IF  shift 55
	OR_IF  shift 56
	.  reduce 7 (src line 85)


state 93
	and_or:  and_or AND_IF linebreak.pipeline 

	WORD  shift 28
	ASSIGNMENT_WORD  shift 27
	NAME  shift 36
	IO_NUMBER  shift 38
	DLESS  shift 47
	DGREAT  shift 44
	LESSAND  shift 41
	GREATAND  shift 43
	LESSGREAT  shift 45
	DLESSDASH  shift 48
	CLOBBER  shift 46
	If  shift 33
	Case  shift 32
	While  shift 34
	Until  shift 35
	For  shift 31
	Lbrace  shift 29
	Bang  shift 11
	'('  shift 30
	'<'  shift 40
	'>'  shift 42
	.  error

	pipeline  goto 115
	pipe_sequence  goto 10
	command  goto 12
	simple_command  goto 13
	compound_command  goto 14
	function_definition  goto 15
	brace_group  goto 18
	subshell  goto 19
	for_clause  goto 20
	case_clause  goto 21
	if_clause  goto 22
	while_clause  goto 23
	until_clause  goto 24
	fname  goto 25
	cmd_prefix  goto 16
	cmd_name  goto 17
	io_redirect  goto 26
	io_file  goto 37
	io_here  goto 39

state 94
	and_or:  and_or OR_IF linebreak.pipeline 

	WORD  shift 28
	ASSIGNMENT_WORD  shift 27
	NAME  shift 36
	IO_NUMBER  shift 38
	DLESS  shift 47
	DGREAT  shift 44
	LESSAND  shift 41
	GREATAND  shift 43
	LESSGREAT  shift 45
	DLESSDASH  shift 48
	CLOBBER  shift 46
	If  shift 33
	Case  shift 32
	While  shift 34
	Until  shift 35
	For  shift 31
	Lbrace  shift 29
	Bang  shift 11
	'('  shift 30
	'<'  shift 40
	'>'  shift 42
	.  error

	pipeline  goto 116
	pipe_sequence  goto 10
	command  goto 12
	simple_command  goto 13
	compound_command  goto 14
	function_definition  goto 15
	brace_group  goto 18
	subshell  goto 19
	for_clause  goto 20
	case_clause  goto 21
	if_clause  goto 22
	while_clause  goto 23
	until_clause  goto 24
	fname  goto 25
	cmd_prefix  goto 16
	cmd_name  goto 17
	io_redirect  goto 26
	io_file  goto 37
	io_here  goto 39

state 95
	pipe_sequence:  pipe_sequence '|' linebreak.command 

	WORD  shift 28
	ASSIGNMENT_WORD  shift 27
	NAME  shift 36
	IO_NUMBER  shift 38
	DLESS  shift 47
	DGREAT  shift 44
	LESSAND  shift 41
	GREATAND  shift 43
	LESSGREAT  shift 45
	DLESSDASH  shift 48
	CLOBBER  shift 46
	If  shift 33
	Case  shift 32
	While  shift 34
	Until  shift 35
	For  shift 31
	Lbrace  shift 29
	'('  shift 30
	'<'  shift 40
	'>'  shift 42
	.  error

	command  goto 117
	simple_command  goto 13
	compound_command  goto 14
	function_definition  goto 15
	brace_group  goto 18
	subshell  goto 19
	for_clause  goto 20
	case_clause  goto 21
	if_clause  goto 22
	while_clause  goto 23
	until_clause  goto 24
	fname  goto 25
	cmd_prefix  goto 16
	cmd_name  goto 17
	io_redirect  goto 26
	io_file  goto 37
	io_here  goto 39

state 96
	redirect_list:  redirect_list io_redirect.    (86)

	.  reduce 86 (src line 197)


state 97
	simple_command:  cmd_prefix cmd_word cmd_suffix.    (70)
	cmd_suffix:  cmd_suffix.io_redirect 
	cmd_suffix:  cmd_suffix.WORD 

	WORD  shift 99
	IO_NUMBER  shift 38
	DLESS  shift 47
	DGREAT  shift 44
	LESSAND  shift 41
	GREATAND  shift 43
	LESSGREAT  shift 45
	DLESSDASH  shift 48
	CLOBBER  shift 46
	'<'  shift 40
	'>'  shift 42
	.  reduce 70 (src line 176)

	io_redirect  goto 98
	io_file  goto 37
	io_here  goto 39

state 98
	cmd_suffix:  cmd_suffix io_redirect.    (82)

	.  reduce 82 (src line 192)


state 99
	cmd_suffix:  cmd_suffix WORD.    (84)

	.  reduce 84 (src line 194)


state 100
	function_definition:  fname '(' ')'.linebreak function_body 
	linebreak: .    (105)

	NEWLINE  shift 4
	.  reduce 105 (src line 223)

	linebreak  goto 118
	newline_list  goto 3

state 101
	brace_group:  Lbrace compound_list Rbrace.    (68)

	.  reduce 68 (src line 172)


state 102
	compound_list:  linebreak term.    (28)
	compound_list:  linebreak term.separator 
	term:  term.separator and_or 

	NEWLINE  shift 4
	'&'  shift 53
	';'  shift 54
	.  reduce 28 (src line 113)

	newline_list  goto 121
	separator_op  goto 120
	separator  goto 119

state 103
	and_or:  and_or.AND_IF linebreak pipeline 
	and_or:  and_or.OR_IF linebreak pipeline 
	term:  and_or.    (31)

	AND_IF  shift 55
	OR_IF  shift 56
	.  reduce 31 (src line 117)


state 104
	subshell:  '(' compound_list ')'.    (27)

	.  reduce 27 (src line 111)


state 105
	for_clause:  For name do_group.    (32)

	.  reduce 32 (src line 119)


state 106
	for_clause:  For name sequential_sep.do_group 

	Do  shift 108
	.  error

	do_group  goto 122

state 107
	for_clause:  For name linebreak.in sequential_sep do_group 
	for_clause:  For name linebreak.in wordlist sequential_sep do_group 

	In  shift 124
	.  error

	in  goto 123

state 108
	do_group:  Do.compound_list Done 
	linebreak: .    (105)

	NEWLINE  shift 4
	.  reduce 105 (src line 223)

	linebreak  goto 70
	newline_list  goto 3
	compound_list  goto 125

state 109
	sequential_sep:  ';'.linebreak 
	linebreak: .    (105)

	NEWLINE  shift 4
	.  reduce 105 (src line 223)

	linebreak  goto 126
	newline_list  goto 3

state 110
	newline_list:  newline_list.NEWLINE 
	linebreak:  newline_list.    (104)
	sequential_sep:  newline_list.    (111)

	NEWLINE  shift 49
	In  reduce 104 (src line 222)
	.  reduce 111 (src line 232)


state 111
	case_clause:  Case WORD linebreak.in linebreak case_list Esac 
	case_clause:  Case WORD linebreak.in linebreak case_list_ns Esac 
	case_clause:  Case WORD linebreak.in linebreak Esac 

	In  shift 124
	.  error

	in  goto 127

state 112
	if_clause:  If compound_list Then.compound_list else_part Fi 
	if_clause:  If compound_list Then.compound_list Fi 
	linebreak: .    (105)

	NEWLINE  shift 4
	.  reduce 105 (src line 223)

	linebreak  goto 70
	newline_list  goto 3
	compound_list  goto 128

state 113
	while_clause:  While compound_list do_group.    (62)

	.  reduce 62 (src line 161)


state 114
	until_clause:  Until compound_list do_group.    (63)

	.  reduce 63 (src line 163)


state 115
	and_or:  and_or AND_IF linebreak pipeline.    (10)

	.  reduce 10 (src line 89)


state 116
	and_or:  and_or OR_IF linebreak pipeline.    (11)

	.  reduce 11 (src line 90)


state 117
	pipe_sequence:  pipe_sequence '|' linebreak command.    (15)

	.  reduce 15 (src line 96)


state 118
	function_definition:  fname '(' ')' linebreak.function_body 

	If  shift 33
	Case  shift 32
	While  shift 34
	Until  shift 35
	For  shift 31
	Lbrace  shift 29
	'('  shift 30
	.  error

	compound_command  goto 130
	brace_group  goto 18
	subshell  goto 19
	for_clause  goto 20
	case_clause  goto 21
	if_clause  goto 22
	while_clause  goto 23
	until_clause  goto 24
	function_body  goto 129

state 119
	compound_list:  linebreak term separator.    (29)
	term:  term separator.and_or 
